<resources>
    <string name="app_name">AMazeByAlexPopa</string>
    <string name="welcome_to_the_labyrinth">Welcome to the Labyrinth!</string>
    <string name="please_select_a_difficulty_from_0_15">Please select a difficulty from 0-15</string>
    <string name="would_you_like_rooms_in_the_maze">Would you like rooms in the maze?</string>
    <string name="maze_generator">Maze Generator</string>
    <string name="revisit">Revisit</string>
    <string name="explore">Explore</string>
    <string name="name">Name</string>
    <string name="please_select_a_driver">Please select a driver</string>
    <string name="please_select_a_robot_configuration">Please select a robot configuration</string>
    <string name="jump">Jump</string>
    <string name="shortcut">Shortcut</string>
    <string name="walls">Walls</string>
    <string name="solution">Solution</string>
    <string name="full_maze">Full Maze</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="go2losing">Go2Losing</string>
    <string name="go2winning">Go2Winning</string>
    <string name="speed">Speed</string>
    <string name="energy">Energy</string>
    <string name="start_pause">Start/Pause</string>
    <string name="smaller">Smaller</string>
    <string name="bigger">Bigger</string>
    <string name="scale_map">Scale Map</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_traveled">You traveled</string>
    <string name="you_escaped_the_labyrinth">You escaped the labyrinth!</string>
    <string name="sensors">Sensors</string>
    <string-array name="yesno_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="generator_array">
        <item>DFS</item>
        <item>PRIM</item>
        <item>BORUVKA</item>
    </string-array>
    <string-array name="driver_array">
        <item>Select:</item>
        <item>Manual</item>
        <item>Wall Follower</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="configuration_array">
        <item>Premium</item>
        <item>Mediocre</item>
        <item>Soso</item>
        <item>Shaky</item>
    </string-array>
</resources>