<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Walls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="646dp"
        android:text="@string/walls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Maze"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Maze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/full_maze"
        app:layout_constraintBottom_toTopOf="@+id/BlurbText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="646dp"
        android:text="@string/solution"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Maze"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/Up"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/up"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Jump"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Maze"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/Down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/down"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Shortcut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Jump"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="539dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="77dp"
        android:contentDescription="@string/left"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Jump"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Walls"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/Right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="539dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/right"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:rotation="90"
        app:layout_constraintBottom_toTopOf="@+id/Shortcut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Jump"
        app:layout_constraintTop_toBottomOf="@+id/Solution"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <Button
        android:id="@+id/Jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/jump"
        app:layout_constraintBottom_toTopOf="@+id/Down"
        app:layout_constraintEnd_toStartOf="@+id/Right"
        app:layout_constraintStart_toEndOf="@+id/Left"
        app:layout_constraintTop_toBottomOf="@+id/Up" />

    <Button
        android:id="@+id/Shortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="598dp"
        android:text="@string/shortcut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Down"
        app:layout_constraintTop_toBottomOf="@+id/Solution" />

    <EditText
        android:id="@+id/BlurbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Scale Map"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Walls"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:text="Smaller"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BlurbText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="449dp"
        android:text="Bigger"
        app:layout_constraintBottom_toTopOf="@+id/Right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/BlurbText"
        app:layout_constraintVertical_bias="0.0" />

    <edu.wm.cs.cs301.AlexPopa.gui.MazePanel
        android:id="@+id/mazePanel3"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>