<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <edu.wm.cs.cs301.AlexPopa.gui.MazePanel
        android:id="@+id/mazePanel"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="63dp"
        android:text="@string/start_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mazePanel"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/smaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:text="@string/smaller"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bigger"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScaleMap"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="28dp"
        android:text="@string/bigger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScaleMap"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ScaleMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="484dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/scale_map"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walls"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/walls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="646dp"
        android:text="@string/walls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fullmaze"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/fullmaze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/full_maze"
        app:layout_constraintBottom_toTopOf="@+id/ScaleMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/solution"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="646dp"
        android:text="@string/solution"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <ProgressBar
        android:id="@+id/energy"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="69dp"
        android:max="3500"
        android:progress="3500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnergyText" />

    <EditText
        android:id="@+id/EnergyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="3dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/energy"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/SpeedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/speed"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnergyText" />

    <SeekBar
        android:id="@+id/speed"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="13dp"
        android:max="4"
        android:progress="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpeedText" />

    <EditText
        android:id="@+id/SensorLabel"
        android:layout_width="73dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/sensors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/mazePanel"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Forward"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="89dp"
        android:text="Forward"
        app:layout_constraintBottom_toTopOf="@+id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/SensorLabel"
        app:layout_constraintTop_toBottomOf="@+id/mazePanel"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/Backward"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="29dp"
        android:text="Backward"
        app:layout_constraintBottom_toTopOf="@+id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/SensorLabel"
        app:layout_constraintTop_toBottomOf="@+id/mazePanel"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/LeftSensor"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="29dp"
        android:text="Left"
        app:layout_constraintBottom_toTopOf="@+id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SensorLabel"
        app:layout_constraintTop_toBottomOf="@+id/mazePanel"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/RightSensor"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="Right"
        app:layout_constraintBottom_toTopOf="@+id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/SensorLabel"
        app:layout_constraintTop_toBottomOf="@+id/mazePanel"
        app:layout_constraintVertical_bias="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>